--- a/widgets/widget.css
+++ b/widgets/widget.css
@@ -1,3 +1,13 @@
+/*! 
+* SmallWorlds X CSS Widgets
+* Description: Common CSS to be shared between homepage widgets.
+* Author: Benjamin Robert
+* Author: Justin Schwertmann
+* URI: https://www.smallworlds.app/
+* Created: 6/14/23
+* Last Edited: 6/15/23
+*/
+
 :root{
 	--widget-color-blue:rgb(63,251,244);
 	--widget-color-blue-alt:rgb(70,203,252);
@@ -59,4 +69,37 @@ body, html{
 	transition-duration:1s;
 	transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
 	box-shadow: inset 2px 2px 3px 0px var(--widget-color-progress-fill-alt);
+}
+
+.widget-box{
+	position:relative;
+	background: radial-gradient(circle, var(--widget-color-blue) 0%, var(--widget-color-blue-alt) 100%);
+	background-color:lightblue;
+	border-radius:18px;
+	border:3px teal solid;
+	height:350px;
+	width:230px;
+	overflow:hidden;
+}
+
+.widget-overlay-dismissed{
+	animation: widgetLoadIn 1s ease-out forwards;
+}
+
+.widget-overlay{
+	position:inherit;
+	background: radial-gradient(circle, var(--widget-color-blue) 0%, var(--widget-color-blue-alt) 100%);
+	background-color:lightblue;
+	width:100%;
+	height:100%;
+	overflow:hidden;
+	opacity:1;
+	z-index:15;
+}
+
+
+@keyframes widgetLoadIn{
+  0% {opacity: 1; }
+  99% {opacity: .01;}
+  100% {opacity: 0; z-index:-1;}
 }
