--- a/widgets/widget.css
+++ b/widgets/widget.css
@@ -51,6 +51,10 @@ body, html{
 	cursor: pointer;
 }
 
+#loadingSpinner{
+	
+}
+
 .progress-bar{
 	margin:3px 20px 3px 5px;
 	border:2px white solid;
@@ -95,8 +99,10 @@ body, html{
 	overflow:hidden;
 	opacity:1;
 	z-index:15;
+	margin:auto;
+	text-align:center;
+	padding:65% 15px 15px 0px;
 }
-
 
 @keyframes widgetLoadIn{
   0% {opacity: 1; }
