--- a/widgets/widget.css
+++ b/widgets/widget.css
@@ -79,8 +79,8 @@ body, html{
 	position:relative;
 	background: radial-gradient(circle, var(--widget-color-blue) 0%, var(--widget-color-blue-alt) 100%);
 	background-color:lightblue;
-	border-radius:18px;
-	border:3px teal solid;
+	border-radius:12px;
+	border:3px #3399bf solid;
 	height:350px;
 	width:230px;
 	overflow:hidden;
