Create interactive placeholder for S2W
We're getting there but still need to hook into the API.
Widget view is complete
Added ho tomepage

--- a/widgets/spin/main.css
+++ b/widgets/spin/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Spin to Win Wheel";
-	src: url('/fonts/LHFBostonTruckstyle.ttf');
+	src: url('./fonts/LHFBostonTruckstyle.ttf');
 	font-weight: normal;
 	font-style:bold;
 }
